apps/base/gitea/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
  annotations:
    gethomepage.dev/href: 'https://gitea.homelab.cs-ol.de'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Gitea
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: gitea.png
    gethomepage.dev/app: gitea
    gethomepage.dev/name: Gitea
    gethomepage.dev/pod-selector: ''
    gethomepage.dev/weight: '1'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitea.homelab.cs-ol.de`)
      services:
        - kind: Service
          name: gitea-http
          port: 3000
  tls: {}
